deploy: 58b90504c2e9ed700a2dd16dd62d96065dc45cd5

--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -99,6 +99,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.adminer.html" class="tsd-kind-icon">Adminer</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.browsermanager.html" class="tsd-kind-icon">Browser<wbr>Manager</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a></li>
@@ -160,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1041">main.d.ts:1041</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1048">main.d.ts:1048</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -186,7 +187,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1037">main.d.ts:1037</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1044">main.d.ts:1044</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -204,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1033">main.d.ts:1033</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1040">main.d.ts:1040</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -245,6 +246,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.browsermanager.html" class="tsd-kind-icon">Browser<wbr>Manager</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a>
