--- a/classes/_local_main_.services.browsermanager.html
+++ b/classes/_local_main_.services.browsermanager.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>CAPI | @getflywheel/local</title>
+	<title>BrowserManager | @getflywheel/local</title>
 	<meta name="description" content="Documentation for @getflywheel/local">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -60,10 +60,10 @@
 					<a href="../modules/_local_main_.services.html">Services</a>
 				</li>
 				<li>
-					<a href="_local_main_.services.capi.html">CAPI</a>
+					<a href="_local_main_.services.browsermanager.html">BrowserManager</a>
 				</li>
 			</ul>
-			<h1>Class CAPI</h1>
+			<h1>Class BrowserManager</h1>
 		</div>
 	</div>
 </header>
@@ -74,7 +74,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">CAPI</span>
+						<span class="target">BrowserManager</span>
 					</li>
 				</ul>
 			</section>
@@ -85,8 +85,8 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.capi.html#createbackup" class="tsd-kind-icon">create<wbr>Backup</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.capi.html#purgecache" class="tsd-kind-icon">purge<wbr>Cache</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.browsermanager.html#getavailablebrowsers" class="tsd-kind-icon">get<wbr>Available<wbr>Browsers</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.browsermanager.html#openinbrowser" class="tsd-kind-icon">open<wbr>InBrowser</a></li>
 							</ul>
 						</section>
 					</div>
@@ -95,54 +95,42 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="createbackup" class="tsd-anchor"></a>
-					<h3>create<wbr>Backup</h3>
+					<a name="getavailablebrowsers" class="tsd-anchor"></a>
+					<h3>get<wbr>Available<wbr>Browsers</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Backup<span class="tsd-signature-symbol">(</span>installId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, description<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Available<wbr>Browsers<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L974">main.d.ts:974</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1010">main.d.ts:1010</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>installId: <span class="tsd-signature-type">string</span></h5>
-								</li>
-								<li>
-									<h5>description: <span class="tsd-signature-type">string</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="purgecache" class="tsd-anchor"></a>
-					<h3>purge<wbr>Cache</h3>
+					<a name="openinbrowser" class="tsd-anchor"></a>
+					<h3>open<wbr>InBrowser</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">purge<wbr>Cache<span class="tsd-signature-symbol">(</span>installId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, type<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">open<wbr>InBrowser<span class="tsd-signature-symbol">(</span>siteUrl<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L976">main.d.ts:976</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1012">main.d.ts:1012</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>installId: <span class="tsd-signature-type">string</span></h5>
-								</li>
-								<li>
-									<h5>type: <span class="tsd-signature-type">any</span></h5>
+									<h5>siteUrl: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -161,13 +149,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a>
+						<a href="_local_main_.services.browsermanager.html" class="tsd-kind-icon">Browser<wbr>Manager</a>
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.capi.html#createbackup" class="tsd-kind-icon">create<wbr>Backup</a>
+								<a href="_local_main_.services.browsermanager.html#getavailablebrowsers" class="tsd-kind-icon">get<wbr>Available<wbr>Browsers</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.capi.html#purgecache" class="tsd-kind-icon">purge<wbr>Cache</a>
+								<a href="_local_main_.services.browsermanager.html#openinbrowser" class="tsd-kind-icon">open<wbr>InBrowser</a>
 							</li>
 						</ul>
 					</li>
