--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -97,6 +97,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.addoninstaller.html" class="tsd-kind-icon">Addon<wbr>Installer</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.addonloader.html" class="tsd-kind-icon">Addon<wbr>Loader</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.adminer.html" class="tsd-kind-icon">Adminer</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.analyticsv2service.html" class="tsd-kind-icon">Analytics<wbr>V2Service</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.browsermanager.html" class="tsd-kind-icon">Browser<wbr>Manager</a></li>
@@ -106,6 +107,8 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.deletesite.html" class="tsd-kind-icon">Delete<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.devkit.html" class="tsd-kind-icon">Dev<wbr>Kit</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.downloader.html" class="tsd-kind-icon">Downloader</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.errorhandler.html" class="tsd-kind-icon">Error<wbr>Handler</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.importsite.html" class="tsd-kind-icon">Import<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a></li>
@@ -136,6 +139,7 @@
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.idevkitserviceargs.html" class="tsd-kind-icon">IDev<wbr>Kit<wbr>Service<wbr>Args</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.ihandlederror.html" class="tsd-kind-icon">IHandled<wbr>Error</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.lightningdbservice.html" class="tsd-kind-icon">LightningDBService</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.sitecerts.html" class="tsd-kind-icon">Site<wbr>Certs</a></li>
@@ -161,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1048">main.d.ts:1048</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1076">main.d.ts:1076</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -187,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1044">main.d.ts:1044</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1072">main.d.ts:1072</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -205,7 +209,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58b9050/main.d.ts#L1040">main.d.ts:1040</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/4a72338/main.d.ts#L1068">main.d.ts:1068</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -242,6 +246,9 @@
 						<a href="../classes/_local_main_.services.adminer.html" class="tsd-kind-icon">Adminer</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.analyticsv2service.html" class="tsd-kind-icon">Analytics<wbr>V2Service</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -267,6 +274,12 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.devkit.html" class="tsd-kind-icon">Dev<wbr>Kit</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.downloader.html" class="tsd-kind-icon">Downloader</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.errorhandler.html" class="tsd-kind-icon">Error<wbr>Handler</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a>
@@ -342,6 +355,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/_local_main_.services.ihandlederror.html" class="tsd-kind-icon">IHandled<wbr>Error</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a>
